<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>GNovatech409BWidget</class>
 <widget class="QWidget" name="GNovatech409BWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>675</width>
    <height>677</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>GNovatech409BWidget</string>
  </property>
  <layout class="QVBoxLayout" name="pLay">
   <item>
    <layout class="QHBoxLayout" name="portNameLayout">
     <item>
      <layout class="QVBoxLayout" name="pLEDLayout"/>
     </item>
     <item>
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>Port Name:</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QLabel" name="label">
     <property name="text">
      <string>Status</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QPlainTextEdit" name="pStatusEdit"/>
   </item>
  </layout>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
